terraforming_bck/nat.tf
resource "aws_nat_gateway" "nat-0c8f9d80788351965" {
    allocation_id = "eipalloc-0a86abd8904ab73c3"
    subnet_id = "subnet-071d930c6e1f7d271"
}

resource "aws_nat_gateway" "nat-0c88c0dad792354b8" {
    allocation_id = "eipalloc-04a2377f10078fbc1"
    subnet_id = "subnet-07fc1cb0c3b60c9ea"
}

resource "aws_nat_gateway" "nat-006665823710d39dd" {
    allocation_id = "eipalloc-0e6ee03e9884df5fb"
    subnet_id = "subnet-0ca9f0115256d4803"
}
