terraforming_bck/rds.tf
resource "aws_db_instance" "aajivtu65f1rb9" {
    identifier                = "aajivtu65f1rb9"
    allocated_storage         = 5
    storage_type              = "gp2"
    engine                    = "mysql"
    engine_version            = "8.0.23"
    instance_class            = "db.t2.micro"
    name                      = "ebdb"
    username                  = "stage"
    password                  = "xxxxxxxx"
    port                      = 3306
    publicly_accessible       = true
    availability_zone         = "eu-west-1a"
    security_group_names      = ["awseb-e-xzvcfbemwt-stack-awsebrdsdbsecuritygroup-14aixrdjd6srz"]
    vpc_security_group_ids    = ["sg-0d58bf7df8b8a7a45"]
    db_subnet_group_name      = "default"
    parameter_group_name      = "default.mysql8.0"
    multi_az                  = false
    backup_retention_period   = 1
    backup_window             = "02:13-02:43"
    maintenance_window        = "mon:03:41-mon:04:11"
    final_snapshot_identifier = "aajivtu65f1rb9-final"
}
resource "aws_db_instance" "planningevo" {
    identifier                = "planningevo"
    allocated_storage         = 20
    storage_type              = "gp2"
    engine                    = "mysql"
    engine_version            = "8.0.23"
    instance_class            = "db.t2.micro"
    name                      = ""
    username                  = "planning_app"
    password                  = "xxxxxxxx"
    port                      = 3306
    publicly_accessible       = false
    availability_zone         = "eu-west-1a"
    security_group_names      = []
    vpc_security_group_ids    = ["sg-238bb260"]
    db_subnet_group_name      = "default-vpc-e4ce369d"
    parameter_group_name      = "default.mysql8.0"
    multi_az                  = false
    backup_retention_period   = 7
    backup_window             = "23:20-23:50"
    maintenance_window        = "sat:22:04-sat:22:34"
    final_snapshot_identifier = "planningevo-final"
}
resource "aws_db_instance" "tappo1" {
    identifier                = "tappo1"
    allocated_storage         = 20
    storage_type              = "gp2"
    engine                    = "mysql"
    engine_version            = "8.0.23"
    instance_class            = "db.t3.micro"
    name                      = "tappo1"
    username                  = "admin"
    password                  = "xxxxxxxx"
    port                      = 3306
    publicly_accessible       = false
    availability_zone         = "eu-west-1a"
    security_group_names      = []
    vpc_security_group_ids    = ["sg-0db4d0641670fbe1e"]
    db_subnet_group_name      = "tappo1"
    parameter_group_name      = "default.mysql8.0"
    multi_az                  = true
    backup_retention_period   = 0
    backup_window             = "22:37-23:07"
    maintenance_window        = "sat:02:14-sat:02:44"
    final_snapshot_identifier = "tappo1-final"
}
